[gd_scene load_steps=2 format=3 uid="uid://xqplhi047qkc"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_6b281"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6b281")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="exit_game" from="." to="." method="_on_exit_game"]
[connection signal="play_game" from="." to="." method="_on_play_game"]
